--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,11 @@ html {
 
 .img {
     background-color: #F5F5DC;
+    width: 30px;
+    height: 30px;
+    margin: auto;
+    padding: 7px;
+    border-radius: 50%;
 }
 
 .contactImg:hover {
