--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ html {
     margin-top: 20px;
 }
 
-/* .contactImg {
+.contactImg {
     width: 40px;
     height: 40px;
     margin: auto;
@@ -67,7 +67,7 @@ html {
 .img {
     width: 40px;
     height: 40px;
-} */
+}
 
 .contactImg:hover {
     background-color: #a3a392;
