--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
 
-/* Colores */
 body,
 html {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    height: 145%;
     overflow: hidden;
     background-color: #07091b;
     font-family: "Poppins", sans-serif;
+    overflow-y: scroll;
 }
 
 #particles-js {
@@ -19,13 +19,13 @@ html {
 }
 
 .content {
-    position: relative;
+    position: absolute;
     z-index: 1;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 145%;
 }
 
 .screenInitial {
@@ -34,6 +34,7 @@ html {
     align-items: center;
     text-align: center;
     color: #F5F5DC;
+    margin-bottom: 140px;
 }
 
 .titles {
@@ -59,7 +60,7 @@ html {
     width: 40px;
     height: 40px;
     margin: auto;
-    background-color: #F5F5DC;
+    background-color: #f5f5dcdb;
     padding: 7px;
     border-radius: 50%;
 }
@@ -70,7 +71,7 @@ html {
 }
 
 .contactImg:hover {
-    background-color: #a3a392;
+    background-color: rgba(163, 163, 146, 0.282);
 }
 
 .image {
@@ -81,11 +82,106 @@ html {
     margin-top: 20px;
 }
 
-@media (min-width: 769px) {
+.apps-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #F5F5DC;
+    background-color: #3333337e;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.apps-button:hover {
+    background-color: #a3a39285;
+}
+
+/* ---------- */
+
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.card {
+    background-color: #5252527e;
+    padding: 20px;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    max-width: 800px;
+}
+
+.icon {
+    width: 90px;
+    height: 90px;
+    margin-right: 20px;
+}
+
+.qr-code {
+    margin-left: 20px;
+    width: 90px;
+    height: 90px;
+}
+
+.contentApp {
+    display: flex;
+    flex-direction: row;
+    text-align: center; 
+    padding-bottom: 20px;
+}
+
+.contentApp h2 {
+    margin: 0px;
+    color: #F5F5DC;
+}
+
+.contentDownload {
+    display: flex;
+    flex: row;
+    gap: 15px;
+}
+
+.store-button {
+    background-color: #00000000;
+}
+
+.store-button img {
+    border-radius: 7px;
+    width: 150px; 
+}
+
+.disabled {
+    pointer-events: none;
+    cursor: not-allowed;
+    opacity: 0.4;
+}
+
+.app-store {
+    pointer-events: none;
+    cursor: not-allowed;
+    opacity: 0.4;
+}
+
+/* ---------- */
+
+@media (min-width: 769px) { /* Pantallas grandes */
     .screenInitial {
         flex-direction: row;
         justify-content: space-between;
         text-align: left;
+        margin-top: 140px;
+        margin-bottom: 140px;
+    }
+
+    .card-container {
+        flex-direction: row;
     }
 
     .titles {
