--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 145%;
+    height: 125%;
     overflow: hidden;
     background-color: #07091b;
     font-family: "Poppins", sans-serif;
@@ -115,19 +115,19 @@ html {
     flex-direction: column;
     align-items: center;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-    max-width: 800px;
+    width: 300px;
 }
 
 .icon {
-    width: 90px;
-    height: 90px;
+    width: 70px;
+    height: 70px;
     margin-right: 20px;
 }
 
 .qr-code {
     margin-left: 20px;
-    width: 90px;
-    height: 90px;
+    width: 70px;
+    height: 70px;
 }
 
 .contentApp {
@@ -140,6 +140,8 @@ html {
 .contentApp h2 {
     margin: 0px;
     color: #F5F5DC;
+    font-size: 130%;
+    width: 130px;
 }
 
 .contentDownload {
@@ -179,7 +181,15 @@ html {
         margin-top: 140px;
         margin-bottom: 140px;
     }
+    .card {
+        width: 370px;
+    }
 
+    .icon, .qr-code {
+        width: 90px;
+        height: 90px;
+    }
+    
     .card-container {
         flex-direction: row;
     }
